# get_code_from_markdown

./: .gitignore  README.md  get_code_from_markdown.py  pyproject.toml  test.py
.github/workflows/: python-app.yml
tests/: __init__.py  test_get_code_from_markdown.py  test_run_code_from_markdown.py
