[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "get_code_from_markdown"
version = "1.0.0"
authors = [{ name = "Brianna Rainey", email = "brianna@tassaron.com" }]
description = "extract code from within triple-quotes (```) in markdown files"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tassaron/get_code_from_markdown"
"Bug Tracker" = "https://github.com/tassaron/get_code_from_markdown/issues"
